syntax = "proto3";
package protomsg;
import "msg_common.proto";

message ChatPlayerData
{
  string head = 1;
  uint32 castle_lv = 2;
}

//公会频道公告类型
enum GuildChannelAnnoType
{
  kGuildChannelAnnoTypeNone = 0;
  kGuildChannelAnnoTypeGuildTrapReward = 1;//公会频道公告类型-联盟陷阱奖励
}

//联盟陷阱奖励公告内容
message GuildChannelAnnoGuildTrapRewardContent
{
  uint64 guild_id = 1;
  string guild_name = 2;
  string guild_short_name = 3;
  uint64 player_id = 4;
  string player_name = 5;
  protomsg.ResourceSet set = 6;
}

//公会频道公告
message GuildChannelAnno
{
  GuildChannelAnnoType type = 1;
  string content = 2;
}